# giflar

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SOSIreader.m  mv.sh  run.sh
src/: main.rs  parser.rs
