[package]
name = "giflar"
version = "0.0.6"
edition = "2021"
authors = ["Joergen Aleksander Fagervik <jorgenafagervik@gmail.com>"]
license = "MIT"
readme = "README.md"

description = "Sosi -> Dat file parser"
repository = "https://github.com/Jafagervik/giflar.git"

keywords = ["sosi","grib", "grib2", "parser", "cli"]
categories = ["science", "command-line-utilities", "compression", "parsing-implementations" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
rayon = "1.7.0"

[profile.dev]
opt-level = 1 

[profile.release]
strip = "debuginfo"
